Set up executable builds