@@ -6,12 +6,17 @@
 
     <groupId>dev.wick</groupId>
     <artifactId>gmtabs</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <name>GMTabs</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.2</junit.version>
+        <appModule>dev.wick.gmtabs</appModule>
+        <mainClass>${appModule}/${appModule}.HelloApplication</mainClass>
+        <imagePath>jlink</imagePath>
+        <modPath>${project.build.directory}/mods</modPath>
+        <telemetry/>
     </properties>
 
     <dependencies>
@@ -39,6 +44,15 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>Telemetry</id>
+            <properties>
+                <telemetry>T</telemetry>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -50,22 +64,112 @@
                     <target>22</target>
                 </configuration>
             </plugin>
+
+            <!--
+            JLink
+            Purpose: Prepares a runtime image (essentially a custom JRE).
+            Used by JPackage.
+            -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
+                <configuration>
+                    <commandlineArgs>${telemetry}</commandlineArgs>
+                </configuration>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>dev.wick.gmtabs/dev.wick.gmtabs.HelloApplication</mainClass>
+                            <mainClass>${mainClass}</mainClass>
                             <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
+                            <jlinkImageName>${imagePath}</jlinkImageName>
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <output>${jlinkOutput}</output>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>${modPath}</outputDirectory>
+                </configuration>
+            </plugin>
+
+            <!--
+            Dependency copier
+            Purpose: Copies project dependencies for use by jpackage.
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeScope>runtime</includeScope>
+                            <outputDirectory>${modPath}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--
+            Jpackage
+            Purpose: Building the executable file from the jlink runtime image
+            & packaging them together.
+            -->
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+
+                <configuration>
+                    <name>${project.name}-v${project.version}${telemetry}</name>
+                    <vendor>app.org</vendor>
+                    <arguments>${telemetry}</arguments>
+                    <type>APP_IMAGE</type>
+                    <modulePaths>
+                        <modulePath>${modPath}</modulePath>
+                    </modulePaths>
+                    <addModules>
+                        <addModule>${appModule}</addModule>
+                    </addModules>
+                    <module>${mainClass}</module>
+                    <destination>${project.build.directory}/dist</destination>
+                    <javaOptions>
+                        <option>--enable-preview</option>
+                        <option>-Dfile.encoding=UTF-8</option>
+                    </javaOptions>
+                    <removeDestination>true</removeDestination>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>mac</id>
+                        <configuration>
+                            <icon>${project.basedir}/icons/icons.icns</icon>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>win</id>
+                        <configuration>
+                            <!--<icon>${project.basedir}/icons/icon.ico</icon>-->
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>linux</id>
+                        <configuration>
+                            <type>APP_IMAGE</type>
+                            <icon>${project.basedir}/icons/icon.png</icon>
                         </configuration>
                     </execution>
                 </executions>
